--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
             <button class="header-button">Stay Focused</button>
         </div>
     </header>
+
+    <!-- main -->
     <main class="main">
+        <!-- Action Section -->
+         <div class="raleway-font action-contenar">
+            <div class="action-text-but">
+                <h2 class="action-title">See It in Action</h2>
+                <p class="action-dis">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="action-button">Launch Live Preview</button>
+            </div>
+            
+            <img src="images/wc-mini.png" alt="" class="action-img">
+         </div>
 
     </main>
     <footer class="footer">
