add main section

--- a/index.html
+++ b/index.html
@@ -146,14 +146,16 @@
                         </div>
 
                         <div>
-                            <div>Name</div>
-                            <input class="name" type="text" name="" id="" placeholder="full name">
+                            <div class="div-t">Name</div>
+                            <input class="email" type="text" name="" id="" placeholder="full name">
                         </div>
 
                         <div>
-                            <div>Message</div>
-                            <textarea class="message" name="" cols="30" rows="7" id="" placeholder="write your message...."></textarea>
+                            <div class="div-t">Message</div>
+                            <textarea class="email" name="" cols="30" rows="7" id="" placeholder="write your message...."></textarea>
                         </div>
+
+                        <button class="form-button">Get in Touch</button>
                     </form>
                 </div>
             </div>
