--- a/index.html
+++ b/index.html
@@ -161,8 +161,21 @@
             </div>
          </section>
     </main>
-    <footer class="footer">
 
+    <!-- footer -->
+    <footer class="footer inter-font">
+        <div class="footer-container">
+            <h1 class="footer-logo">LOGO</h1>
+            <p class="footer-dis">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <div class="footer-nav">
+                <ul class="ul">
+                    <div><a class="ancor" href="http://">Home</a></div>
+                    <div><a class="ancor" href="http://">About</a></div>
+                    <div><a class="ancor" href="http://">How it Works</a></div>
+                    <div><a class="ancor" href="http://">Services</a></div>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
